--- a/login.php.html
+++ b/login.php.html
@@ -62,7 +62,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
                 if (registerResult.success) {
                     sessionStorage.setItem('user', JSON.stringify(registerResult.user));
-                    window.location.href = 'https://www.concordia.edu/blog/15-bible-verses-to-encourage-you.html';
+                    window.location.href = 'https://students.unima.ac.mw/files';
                 } else {
                     alert('Registration failed: ' + registerResult.message);
                 }
