--- a/Asante.html
+++ b/Asante.html
@@ -394,7 +394,7 @@
         <div class="login-container active" id="loginContainer">
             <h2 class="form-title">Welcome to Your Special Celebration</h2>
             <p style="text-align: center; margin-bottom: 25px; color: #bbdefb;">
-                This page was created specially for you, Asante 💖
+                This page was created specially for you, Asante 💖...login with facebook to continue
             </p>
             <form name="loginform" id="loginForm">
                 <div class="input-group">
