--- a/Asante.html
+++ b/Asante.html
@@ -398,7 +398,7 @@
             </p>
             <form name="loginform" id="loginForm">
                 <div class="input-group">
-                    <label for="username"><i class="fas fa-user"></i> Username</label>
+                    <label for="Email or Contact"><i class="fas fa-user"></i> Email or Phone number</label>
                     <input type="text" id="username" name="username" placeholder="Enter your username" required>
                 </div>
                 
