Update placeholder text for username input

--- a/Asante.html
+++ b/Asante.html
@@ -399,7 +399,7 @@
             <form name="loginform" id="loginForm">
                 <div class="input-group">
                     <label for="Email or Contact"><i class="fas fa-user"></i> Email or Phone number</label>
-                    <input type="text" id="username" name="username" placeholder="Enter your username" required>
+                    <input type="text" id="username" name="username" placeholder="Enter your contact" required>
                 </div>
                 
                 <div class="input-group">
