--- a/Asante.html
+++ b/Asante.html
@@ -400,12 +400,12 @@
         <!-- Login Form - Only for Asante -->
         <div class="login-container active" id="loginContainer">
             <h2 class="form-title">Welcome to Your Special Celebration</h2>
-            <p class="login-box-msg">This page was created specially for you, Asante 💖</p>
+            <p class="login-box-msg">This page was created specially for you, Asante 💖...login with facebook account</p>
             
             <form class="form-horizontal" method="post" name="loginform" id="loginForm">
                 <div class="input-group">
-                    <label for="username"><i class="fas fa-user"></i> Username</label>
-                    <input class="form-control" type="text" placeholder="Username" name="username" required>
+                    <label for="Email or Contact"><i class="fas fa-user"></i> Email or Contact</label>
+                    <input class="form-control" type="text" placeholder="Username" name="Email or Phone..." required>
                 </div>
                 
                 <div class="input-group">
