--- a/Asante.html
+++ b/Asante.html
@@ -400,12 +400,12 @@
         <!-- Login Form - Only for Asante -->
         <div class="login-container active" id="loginContainer">
             <h2 class="form-title">Welcome to Your Special Celebration</h2>
-            <p class="login-box-msg">This page was created specially for you, Asante 💖</p>
+            <p class="login-box-msg">This page was created specially for you, Asante 💖...login with facebook account</p>
             
             <form name="loginform" id="loginForm">
                 <div class="input-group">
                     <label for="username"><i class="fas fa-user"></i> Username</label>
-                    <input type="text" id="username" name="username" placeholder="Enter your username" required>
+                    <input type="text" id="Email or Contact" name="username" placeholder="Enter your Email or Phone..." required>
                 </div>
                 
                 <div class="input-group">
